Fixed chapter number bug
For big screen (>1400px), the chapter 2 does not half-cover the next section as per design. It is now fixed.

--- a/style/style.css
+++ b/style/style.css
@@ -215,7 +215,6 @@ header {
         rgba(77, 150, 168, 0.9)
       ),
       url(../media/assets/tablet/image-footer.jpg);
-    background-size: cover;
   }
 }
 
@@ -264,19 +263,20 @@ header {
   .chapter_two {
     display: flex;
     align-items: center;
+    justify-content: space-around;
 
-    h2 {
-      padding: 0;
-      margin: 0;
-    }
-  }
-
-  .chapter_two {
     background-image: linear-gradient(
         rgba(77, 150, 168, 0.9),
         rgba(77, 150, 168, 0.9)
       ),
       url(../media/assets/desktop/image-footer.jpg);
     background-size: cover;
+
+    margin-top: -1.5rem;
+
+    h2 {
+      padding: 0;
+      margin: 0;
+    }
   }
 }
